[package]
name = "car"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_hanabi = "0.7"
bevy_integrator = { path = "../integrator" }
rigid_body = { path = "../rigid_body" }
cameras = { path = "../cameras" }
grid_terrain = { path = "../grid_terrain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[features]
default = []
dev = [
    "bevy/dynamic_linking",
]